DuPont DevSB/src/objects/pse__Resource_Request__c.object
<CustomObject>
    <customHelpPage>pse__ResourceRequestHelp</customHelpPage>
    <description>Operating as a means of asking for resources to staff an existing or planned project, resource requests collect information to help users responsible for staffing and assignment creation to choose the right resource. The user requesting the resource (e.g., project manager or sales professional) may create a resource request from an opportunity or project, or generate them based on project tasks and project task assignments. Held resource requests, or “soft bookings”, occur when a named resource has been reserved for a project or opportunity, but not yet assigned to the project.</description>
    <fields>
        <fullName>FF_PSA_Average_Hold_Over_Cost_Rate__c</fullName>
        <description>To store the Hold Over,Training,Travel cost rates for the resource role specific to region</description>
        <inlineHelpText>To store the Hold Over,Training,Travel cost rates for the resource role specific to region</inlineHelpText>
        <label>Average Hold Over Cost Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Average_Training_Cost_Rate__c</fullName>
        <description>To store the Hold Over,Training,Travel cost rates for the resource role specific to region</description>
        <inlineHelpText>To store the Hold Over,Training,Travel cost rates for the resource role specific to region</inlineHelpText>
        <label>Average Training Cost Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Average_Travel_Cost_Rate__c</fullName>
        <description>To store the Hold Over,Training,Travel cost rates for the resource role specific to region</description>
        <inlineHelpText>To store the Hold Over,Training,Travel cost rates for the resource role specific to region</inlineHelpText>
        <label>Average Travel Cost Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FF_PSA_For_Project_Delivery__c</fullName>
        <defaultValue>true</defaultValue>
        <description>To know whether resource request is for main project or for proposal project.</description>
        <label>For Project Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Holdover_Assignment_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Holdover Assignment Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Holdover_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Requested Holdover Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FF_PSA_Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Region_Different__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To know whether the selected resource and RR(project) are from same region or not.</description>
        <label>Region Different</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Region_Name_Chain__c</fullName>
        <formula>pse__Region__r.pse__Region_Name_Chain__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region Name Chain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Scheduler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scheduler</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FF_PSA_Scheduler</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Suggested_Hold_Over_Bill_Rate__c</fullName>
        <description>To store the Hold Over,Training,Travel bill rates for the resource role specific to region</description>
        <inlineHelpText>To store the Hold Over,Training,Travel bill rates for the resource role specific to region</inlineHelpText>
        <label>Suggested Hold Over Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Suggested_Training_Bill_Rate__c</fullName>
        <description>To store the Hold Over,Training,Travel bill rates for the resource role specific to region</description>
        <inlineHelpText>To store the Hold Over,Training,Travel bill rates for the resource role specific to region</inlineHelpText>
        <label>Suggested Training Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Suggested_Travel_Bill_Rate__c</fullName>
        <description>To store the Hold Over,Training,Travel bill rates for the resource role specific to region</description>
        <inlineHelpText>To store the Hold Over,Training,Travel bill rates for the resource role specific to region</inlineHelpText>
        <label>Suggested Travel Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Time_and_Material__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Time and Material</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Total_HoldOver_Cost__c</fullName>
        <formula>FF_PSA_Average_Hold_Over_Cost_Rate__c
*FF_PSA_Holdover_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total HoldOver Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Total_Resource_cost__c</fullName>
        <formula>(FF_PSA_Total_Work_Cost__c+FF_PSA_Total_Training_Cost__c+FF_PSA_Total_HoldOver_Cost__c+FF_PSA_Total_Travel_Cost__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Resource Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Total_Training_Cost__c</fullName>
        <formula>FF_PSA_Training_Hours__c
*FF_PSA_Average_Training_Cost_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Training Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Total_Travel_Cost__c</fullName>
        <formula>FF_PSA_Average_Travel_Cost_Rate__c 
*FF_PSA_Travel_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Travel Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Total_Work_Cost__c</fullName>
        <formula>pse__Average_Cost_Rate_Number__c * pse__SOW_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Work Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Training_Assignment_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Training Assignment Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Training_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Requested Training Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Travel_Assignment_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel Assignment Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Travel_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Requested Travel Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_Name__c</fullName>
        <label>Legacy Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>psa_report__Project_Name__c</fullName>
        <formula>pse__Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__AccountId__c</fullName>
        <description>The Id of the Account associated with the related Opportunity, if one exists; otherwise, the Id of the Account associated with the related Project, if one exists.</description>
        <formula>IF(AND(NOT(ISNULL(pse__Opportunity__c)),NOT(pse__Opportunity__c=&apos;&apos;),NOT(ISNULL(pse__Opportunity__r.AccountId)),NOT(pse__Opportunity__r.AccountId=&apos;&apos;)),
pse__Opportunity__r.AccountId,
IF(AND(NOT(ISNULL(pse__Project__c)),NOT(pse__Project__c=&apos;&apos;),NOT(ISNULL(pse__Project__r.pse__Account__c)),NOT(pse__Project__r.pse__Account__c=&apos;&apos;)),pse__Project__r.pse__Account__c,null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Id of the Account associated with the related Opportunity, if one exists; otherwise, the Id of the Account associated with the related Project, if one exists.</inlineHelpText>
        <label>AccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Account_Link__c</fullName>
        <description>A link to the Account associated with the related Opportunity, if one exists; otherwise, a link to the Account associated with the related Project, if one exists.</description>
        <formula>IF(ISNULL(pse__AccountId__c),&apos;&apos;,HYPERLINK(&apos;/&apos;&amp;pse__AccountId__c, IF(ISNULL(pse__Account__c),pse__AccountId__c,pse__Account__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A link to the Account associated with the related Opportunity, if one exists; otherwise, a link to the Account associated with the related Project, if one exists.</inlineHelpText>
        <label>Account Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Account__c</fullName>
        <description>The Name of the Account associated with the related Opportunity, if one exists; otherwise, the Name of the Account associated with the related Project, if one exists.</description>
        <formula>IF(AND(NOT(ISNULL(pse__Opportunity__c)),NOT(pse__Opportunity__c=&apos;&apos;),NOT(ISNULL(pse__Opportunity__r.AccountId)),NOT(pse__Opportunity__r.AccountId=&apos;&apos;),NOT(ISNULL(pse__Opportunity__r.Account.Name)),NOT(pse__Opportunity__r.Account.Name=&apos;&apos;)),pse__Opportunity__r.Account.Name,
IF(AND(NOT(ISNULL(pse__Project__c)),NOT(pse__Project__c=&apos;&apos;),NOT(ISNULL(pse__Project__r.pse__Account__c)),NOT(pse__Project__r.pse__Account__c=&apos;&apos;),NOT(ISNULL(pse__Project__r.pse__Account__r.Name)),NOT(pse__Project__r.pse__Account__r.Name=&apos;&apos;)),pse__Project__r.pse__Account__r.Name,null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Name of the Account associated with the related Opportunity, if one exists; otherwise, the Name of the Account associated with the related Project, if one exists.</inlineHelpText>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignment</label>
        <referenceTo>pse__Assignment__c</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Average_Cost_Rate_Currency_Code__c</fullName>
        <label>Average Cost Rate Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Average_Cost_Rate_Number__c</fullName>
        <label>Average Cost Rate Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Average_Cost_Rate__c</fullName>
        <formula>pse__Average_Cost_Rate_Currency_Code__c &amp; &apos; &apos; &amp; TEXT(pse__Average_Cost_Rate_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Cost Rate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Latitude_PSA__c</fullName>
        <label>Latitude (PSA)</label>
        <precision>10</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Longitude_PSA__c</fullName>
        <label>Longitude (PSA)</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Milestone</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>pse__Milestone__c.pse__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.pse__Project__c</valueField>
            </filterItems>
            <infoMessage>Only selected project&apos;s milestones are shown. To display all Milestones, click Show all results.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>pse__Milestone__c</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Opportunity_Probability__c</fullName>
        <formula>pse__Opportunity__r.Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Probability (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Percent_Allocated__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Enter the percentage that this resource should be allocated to the project.</inlineHelpText>
        <label>Percent Allocated</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Planned_Bill_Rate__c</fullName>
        <description>This field is the bill rate used during the planning activities for an assignment to assess potential value. It is mainly used for fixed price projects where the actual bill rate is 0</description>
        <inlineHelpText>This field is the bill rate used during the planning activities for an assignment to assess potential value. It is mainly used for fixed price projects where the actual bill rate is 0</inlineHelpText>
        <label>Planned Bill Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Preferred_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preferred Schedule</label>
        <referenceTo>pse__Schedule__c</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Primary_Skill_Certification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not intended for direct entry - controlled by the primary flag on the related skills / certifications.</inlineHelpText>
        <label>Primary Skill / Certification</label>
        <referenceTo>pse__Skill__c</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Primary_Skill_Minimum_Rating__c</fullName>
        <description>Added to simplify reports. Not intended for editing.</description>
        <label>Primary Skill Minimum Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Rate_Card__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate Card</label>
        <referenceTo>pse__Rate_Card__c</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Related_Resource_Request_Staffed_On__c</fullName>
        <description>Date and time on which a resource request in the same resource request set was staffed.</description>
        <inlineHelpText>Date and time on which a resource request in the same resource request set was staffed.</inlineHelpText>
        <label>Related Resource Request Staffed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Request_Billable_Amount__c</fullName>
        <formula>pse__Requested_Bill_Rate__c *  pse__SOW_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Billable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Request_Priority__c</fullName>
        <label>Request Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Requested_Bill_Rate__c</fullName>
        <inlineHelpText>Request an hourly bill rate</inlineHelpText>
        <label>Requested Bill Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Held__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resource Held</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Request_Name__c</fullName>
        <label>Resource Request Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Request_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the related resource request set.</description>
        <inlineHelpText>Lookup to the related resource request set.</inlineHelpText>
        <label>Resource Request Set</label>
        <referenceTo>pse__Resource_Request_Set__c</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Role__c</fullName>
        <label>Resource Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Mgr</fullName>
                </value>
                <value>
                    <fullName>Account Mgr Principal</fullName>
                </value>
                <value>
                    <fullName>Account Mgr Senior</fullName>
                </value>
                <value>
                    <fullName>BDM</fullName>
                </value>
                <value>
                    <fullName>BDM JUNIOR</fullName>
                </value>
                <value>
                    <fullName>BDM PRINCIPAL</fullName>
                </value>
                <value>
                    <fullName>BDM Senior</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>CONSULTANT ASSOCIATE</fullName>
                </value>
                <value>
                    <fullName>CONSULTANT PRINCIPAL</fullName>
                </value>
                <value>
                    <fullName>CONSULTANT SENIOR</fullName>
                </value>
                <value>
                    <fullName>CONSULTANT TRAINER</fullName>
                </value>
                <value>
                    <fullName>L&amp;D - Production</fullName>
                </value>
                <value>
                    <fullName>L&amp;D - Production Leader</fullName>
                </value>
                <value>
                    <fullName>Market/ Regional Leader</fullName>
                </value>
                <value>
                    <fullName>Other - Business Functions</fullName>
                </value>
                <value>
                    <fullName>Practice Leader</fullName>
                </value>
                <value>
                    <fullName>Practice SME</fullName>
                </value>
                <value>
                    <fullName>PROJECT CONTROLLER</fullName>
                </value>
                <value>
                    <fullName>PROJECT LEADER</fullName>
                </value>
                <value>
                    <fullName>PROJECT LEADER PRINCIPAL</fullName>
                </value>
                <value>
                    <fullName>PROJECT LEADER SENIOR</fullName>
                </value>
                <value>
                    <fullName>PROJECT SUPPORT</fullName>
                </value>
                <value>
                    <fullName>SCHEDULER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Suggest a resource to use</inlineHelpText>
        <label>Suggested Resource</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.pse__Is_Resource__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Contact.pse__Is_Resource_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Only active resources are shown. To display all resources, click Show all results.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__SOW_Hours__c</fullName>
        <inlineHelpText>Requested hours for this resource request.</inlineHelpText>
        <label>Requested Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Staffed_Related_Resource_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the related resource request, which is staffed.</description>
        <inlineHelpText>Lookup to the related resource request, which is staffed.</inlineHelpText>
        <label>Staffed Related Resource Request</label>
        <referenceTo>pse__Resource_Request__c</referenceTo>
        <relationshipLabel>Resource Requests (Staffed Related Resource Request)</relationshipLabel>
        <relationshipName>Resource_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Staffer_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Staffer Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Staffer_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This resource will be picked by Staffer for this resource request.</description>
        <label>Resource</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.pse__Is_Resource__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Contact.pse__Is_Resource_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Only active resources are shown. To display all resources, click Show all results.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Resource Requests (Staffer Resource)</relationshipLabel>
        <relationshipName>Resource_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>Ready to Staff</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Tentative</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Suggested_Bill_Rate_Currency_Code__c</fullName>
        <label>Suggested Bill Rate Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Suggested_Bill_Rate_Number__c</fullName>
        <label>Suggested Bill Rate Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Suggested_Bill_Rate__c</fullName>
        <formula>pse__Suggested_Bill_Rate_Currency_Code__c &amp; &apos; &apos; &amp; TEXT(pse__Suggested_Bill_Rate_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suggested Bill Rate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Update_Related_Resource_Requests__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the staffing fields on the resource request are updated when a resource request belonging to the same resource request set as this one is staffed.</description>
        <inlineHelpText>Indicates whether the staffing fields on the resource request are updated when a resource request belonging to the same resource request set as this one is staffed.</inlineHelpText>
        <label>Update Related Resource Requests</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Work_City_PSA__c</fullName>
        <label>Work City (PSA)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Work_Country_PSA__c</fullName>
        <label>Work Country (PSA)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Work_PostalCode_PSA__c</fullName>
        <label>Work Zip/Postal Code (PSA)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Work_State_PSA__c</fullName>
        <label>Work State/Province (PSA)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Work_Street_PSA__c</fullName>
        <label>Work Street (PSA)</label>
        <type>TextArea</type>
    </fields>
    <label>Resource Request</label>
    <listViews>
        <fullName>FF_PSA_AP_ANZ_Scheduler_Resource_Request</fullName>
        <columns>NAME</columns>
        <columns>pse__Resource_Request_Name__c</columns>
        <columns>pse__Resource__c</columns>
        <columns>pse__Staffer_Resource__c</columns>
        <columns>pse__Status__c</columns>
        <columns>pse__Project__c</columns>
        <columns>FF_PSA_For_Project_Delivery__c</columns>
        <columns>pse__Start_Date__c</columns>
        <columns>pse__End_Date__c</columns>
        <columns>FF_PSA_Project_Manager__c</columns>
        <columns>pse__Region__c</columns>
        <columns>pse__SOW_Hours__c</columns>
        <columns>FF_PSA_Travel_Hours__c</columns>
        <columns>FF_PSA_Holdover_Hours__c</columns>
        <columns>FF_PSA_Training_Hours__c</columns>
        <filterScope>Queue</filterScope>
        <label>FF PSA AP - ANZ Scheduler</label>
        <language>en_US</language>
        <queue>FF_PSA_AP_ANZ_Scheduler</queue>
        <sharedTo>
            <group>FF_PSA_Scheduler_DSS_AP_ANZ</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_PSA_AP_ASEAN_Scheduler_Resource_Request</fullName>
        <columns>NAME</columns>
        <columns>pse__Resource_Request_Name__c</columns>
        <columns>pse__Resource__c</columns>
        <columns>pse__Staffer_Resource__c</columns>
        <columns>pse__Status__c</columns>
        <columns>pse__Project__c</columns>
        <columns>FF_PSA_For_Project_Delivery__c</columns>
        <columns>pse__Start_Date__c</columns>
        <columns>pse__End_Date__c</columns>
        <columns>FF_PSA_Project_Manager__c</columns>
        <columns>pse__Region__c</columns>
        <columns>pse__SOW_Hours__c</columns>
        <columns>FF_PSA_Travel_Hours__c</columns>
        <columns>FF_PSA_Holdover_Hours__c</columns>
        <columns>FF_PSA_Training_Hours__c</columns>
        <filterScope>Queue</filterScope>
        <label>FF PSA AP - ASEAN+ Scheduler</label>
        <language>en_US</language>
        <queue>FF_PSA_AP_ASEAN_Scheduler</queue>
        <sharedTo>
            <group>FF_PSA_Scheduler_DSS_AP_ASEAN</group>
        </sharedTo>
    </listViews>
</CustomObject>